--- a/Assets/Plugins/Android/settingsTemplate.gradle
+++ b/Assets/Plugins/Android/settingsTemplate.gradle
@@ -19,6 +19,18 @@ dependencyResolutionManagement {
 // Android Resolver Repos Start
         def unityProjectPath = $/file:///**DIR_UNITYPROJECT**/$.replace("\\", "/")
         maven {
+            url "https://artifactory.appodeal.com/appodeal" // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:194
+        }
+        maven {
+            url "https://artifactory.bidmachine.io/bidmachine" // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:194
+        }
+        maven {
+            url "https://artifactory.bidon.org/bidon" // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:194
+        }
+        maven {
+            url "https://repo1.maven.org/maven2" // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:194
+        }
+        maven {
             url (unityProjectPath + "/Assets/GooglePlayGames/com.google.play.games/Editor/m2repository") // Assets/GooglePlayGames/com.google.play.games/Editor/GooglePlayGamesPluginDependencies.xml:11
         }
         mavenLocal()
