--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
+    "com.appodeal.mediation": "https://github.com/appodeal/appodeal-unity-plugin-upm.git#v3.6.0",
     "com.google.external-dependency-manager": "file:C:/Users/Daria/Downloads/com.google.external-dependency-manager-1.2.186 (1).tgz",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.ads": "4.4.2",
     "com.unity.ai.navigation": "1.1.6",
     "com.unity.analytics": "3.8.1",
     "com.unity.collab-proxy": "2.7.1",
@@ -11,7 +11,7 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.mobile.android-logcat": "1.4.5",
-    "com.unity.purchasing": "4.11.0",
+    "com.unity.purchasing": "4.12.0",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.7",
     "com.unity.timeline": "1.7.7",
