--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "com.appodeal.mediation": "https://github.com/appodeal/appodeal-unity-plugin-upm.git#v3.6.0",
-    "com.google.external-dependency-manager": "file:C:/Users/Daria/Downloads/com.google.external-dependency-manager-1.2.186 (1).tgz",
+    "com.google.external-dependency-manager": "file:LocalDeps/com.google.external-dependency-manager-1.2.186.tgz",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ai.navigation": "1.1.6",
