--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
+*.so filter=lfs diff=lfs merge=lfs -text
+*.bundle filter=lfs diff=lfs merge=lfs -text
 Assets/Firebase/Plugins/x86_64/*.so filter=lfs diff=lfs merge=lfs -text
 Assets/Firebase/Plugins/x86_64/*.bundle filter=lfs diff=lfs merge=lfs -text
