--- a/Assets/Plugins/IOS/GoogleService-Info.plist
+++ b/Assets/Plugins/IOS/GoogleService-Info.plist
@@ -1,19 +1,21 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>205672385817-9s66s6n3utmm40edup9crq7soj09af61.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDJd-fK8Lx2wKC3ARh70f567vlLT4NMzBI</string>
+	<string>AIzaSyDyFRHcJwht7g39I5VIIyw6FYkKqQZkLYg</string>
 	<key>GCM_SENDER_ID</key>
-	<string>1011441565585</string>
+	<string>205672385817</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.combysoft.combygames</string>
 	<key>PROJECT_ID</key>
-	<string>combygames-id</string>
+	<string>combygames</string>
 	<key>STORAGE_BUCKET</key>
-	<string>combygames-id.firebasestorage.app</string>
+	<string>combygames.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +27,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1011441565585:ios:74e5d47d26ecf2fc136430</string>
+	<string>1:205672385817:ios:930222bf807018d3768988</string>
 </dict>
 </plist>
