--- a/Assets/Plugins/Android/mainTemplate.gradle
+++ b/Assets/Plugins/Android/mainTemplate.gradle
@@ -20,8 +20,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 // Android Resolver Dependencies Start
     implementation 'com.applovin.mediation:amazon-tam-adapter:11.0.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:166
-    implementation 'com.applovin.mediation:bidmachine-adapter:3.2.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:167
-    implementation 'com.applovin.mediation:bidon-adapter:0.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:168
+    implementation 'com.applovin.mediation:bidmachine-adapter:3.3.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:167
+    implementation 'com.applovin.mediation:bidon-adapter:0.9.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:168
     implementation 'com.applovin.mediation:bigoads-adapter:5.3.0.1' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:169
     implementation 'com.applovin.mediation:bytedance-adapter:7.1.0.4.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:180
     implementation 'com.applovin.mediation:facebook-adapter:6.20.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:174
@@ -33,7 +33,7 @@ dependencies {
     implementation 'com.applovin.mediation:mintegral-adapter:16.9.71.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:175
     implementation 'com.applovin.mediation:mobilefuse-adapter:1.9.2.1' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:176
     implementation 'com.applovin.mediation:moloco-adapter:3.9.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:177
-    implementation 'com.applovin.mediation:mytarget-adapter:5.27.1.2' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:178
+    implementation 'com.applovin.mediation:mytarget-adapter:5.27.2.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:178
     implementation 'com.applovin.mediation:ogury-presage-adapter:6.0.1.1' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:179
     implementation 'com.applovin.mediation:pubmatic-adapter:4.5.2.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:181
     implementation 'com.applovin.mediation:smaato-adapter:22.7.2.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:182
@@ -41,41 +41,41 @@ dependencies {
     implementation 'com.applovin.mediation:verve-adapter:3.3.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:184
     implementation 'com.applovin.mediation:vungle-adapter:7.5.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:185
     implementation 'com.applovin.mediation:yandex-adapter:7.14.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:186
-    implementation 'com.appodeal.ads.sdk.networks:admob:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:96
-    implementation 'com.appodeal.ads.sdk.networks:amazon:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:97
-    implementation 'com.appodeal.ads.sdk.networks:applovin:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:98
-    implementation 'com.appodeal.ads.sdk.networks:applovin_max:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:110
-    implementation 'com.appodeal.ads.sdk.networks:bidmachine:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:100
-    implementation 'com.appodeal.ads.sdk.networks:bidon:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:101
-    implementation 'com.appodeal.ads.sdk.networks:bigo_ads:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:102
-    implementation 'com.appodeal.ads.sdk.networks:dt_exchange:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:103
-    implementation 'com.appodeal.ads.sdk.networks:iab:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:106
-    implementation 'com.appodeal.ads.sdk.networks:inmobi:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:107
-    implementation 'com.appodeal.ads.sdk.networks:ironsource:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:108
-    implementation 'com.appodeal.ads.sdk.networks:level_play:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:109
-    implementation 'com.appodeal.ads.sdk.networks:meta:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:111
-    implementation 'com.appodeal.ads.sdk.networks:mintegral:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:112
-    implementation 'com.appodeal.ads.sdk.networks:mobilefuse:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:113
-    implementation 'com.appodeal.ads.sdk.networks:moloco:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:114
-    implementation 'com.appodeal.ads.sdk.networks:my_target:3.8.0.1' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:115
-    implementation 'com.appodeal.ads.sdk.networks:ogury:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:116
-    implementation 'com.appodeal.ads.sdk.networks:pangle:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:117
-    implementation 'com.appodeal.ads.sdk.networks:pubmatic:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:118
-    implementation 'com.appodeal.ads.sdk.networks:smaato:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:120
-    implementation 'com.appodeal.ads.sdk.networks:unity_ads:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:121
-    implementation 'com.appodeal.ads.sdk.networks:verve:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:122
-    implementation 'com.appodeal.ads.sdk.networks:vungle:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:123
-    implementation 'com.appodeal.ads.sdk.networks:yandex:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:124
-    implementation 'com.appodeal.ads.sdk.services:adjust:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:95
-    implementation 'com.appodeal.ads.sdk.services:appsflyer:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:99
-    implementation 'com.appodeal.ads.sdk.services:facebook_analytics:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:104
-    implementation 'com.appodeal.ads.sdk.services:firebase:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:105
-    implementation 'com.appodeal.ads.sdk.services:sentry_analytics:3.8.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:119
-    implementation 'com.appodeal.ads.sdk:core:3.8.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:94
+    implementation 'com.appodeal.ads.sdk.networks:admob:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:96
+    implementation 'com.appodeal.ads.sdk.networks:amazon:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:97
+    implementation 'com.appodeal.ads.sdk.networks:applovin:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:98
+    implementation 'com.appodeal.ads.sdk.networks:applovin_max:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:110
+    implementation 'com.appodeal.ads.sdk.networks:bidmachine:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:100
+    implementation 'com.appodeal.ads.sdk.networks:bidon:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:101
+    implementation 'com.appodeal.ads.sdk.networks:bigo_ads:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:102
+    implementation 'com.appodeal.ads.sdk.networks:dt_exchange:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:103
+    implementation 'com.appodeal.ads.sdk.networks:iab:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:106
+    implementation 'com.appodeal.ads.sdk.networks:inmobi:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:107
+    implementation 'com.appodeal.ads.sdk.networks:ironsource:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:108
+    implementation 'com.appodeal.ads.sdk.networks:level_play:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:109
+    implementation 'com.appodeal.ads.sdk.networks:meta:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:111
+    implementation 'com.appodeal.ads.sdk.networks:mintegral:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:112
+    implementation 'com.appodeal.ads.sdk.networks:mobilefuse:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:113
+    implementation 'com.appodeal.ads.sdk.networks:moloco:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:114
+    implementation 'com.appodeal.ads.sdk.networks:my_target:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:115
+    implementation 'com.appodeal.ads.sdk.networks:ogury:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:116
+    implementation 'com.appodeal.ads.sdk.networks:pangle:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:117
+    implementation 'com.appodeal.ads.sdk.networks:pubmatic:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:118
+    implementation 'com.appodeal.ads.sdk.networks:smaato:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:120
+    implementation 'com.appodeal.ads.sdk.networks:unity_ads:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:121
+    implementation 'com.appodeal.ads.sdk.networks:verve:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:122
+    implementation 'com.appodeal.ads.sdk.networks:vungle:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:123
+    implementation 'com.appodeal.ads.sdk.networks:yandex:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:124
+    implementation 'com.appodeal.ads.sdk.services:adjust:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:95
+    implementation 'com.appodeal.ads.sdk.services:appsflyer:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:99
+    implementation 'com.appodeal.ads.sdk.services:facebook_analytics:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:104
+    implementation 'com.appodeal.ads.sdk.services:firebase:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:105
+    implementation 'com.appodeal.ads.sdk.services:sentry_analytics:3.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:119
+    implementation 'com.appodeal.ads.sdk:core:3.8.1' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:94
     implementation 'com.google.android.gms:play-services-appset:16.0.2' // Assets/GameAnalytics/Editor/Android/Dependencies.xml:4
     implementation 'com.google.android.instantapps:instantapps:1.1.0' // Assets/GameAnalytics/Editor/Android/Dependencies.xml:3
     implementation 'com.google.games:gpgs-plugin-support:2.0.0' // Assets/GooglePlayGames/com.google.play.games/Editor/GooglePlayGamesPluginDependencies.xml:11
-    implementation 'com.ironsource.adapters:bidon-adapter:0.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:149
+    implementation 'com.ironsource.adapters:bidon-adapter:0.9.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:149
     implementation 'com.unity3d.ads-mediation:admob-adapter:4.3.50' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:144
     implementation 'com.unity3d.ads-mediation:applovin-adapter:4.3.53' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:146
     implementation 'com.unity3d.ads-mediation:aps-adapter:4.3.17' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:145
@@ -95,26 +95,26 @@ dependencies {
     implementation 'com.unity3d.ads-mediation:verve-adapter:4.3.5' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:162
     implementation 'com.unity3d.ads-mediation:vungle-adapter:4.3.30' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:163
     implementation 'com.unity3d.ads-mediation:yandex-adapter:4.3.13' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:164
-    implementation 'io.bidmachine:ads.adapters.ironsource:3.2.1.8' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:148
-    implementation 'io.bidmachine:ads.networks.amazon:3.2.1.17' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:125
-    implementation 'io.bidmachine:ads.networks.meta_audience:3.2.1.17' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:126
-    implementation 'io.bidmachine:ads.networks.mintegral:3.2.1.13' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:127
-    implementation 'io.bidmachine:ads.networks.my_target:3.2.1.18' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:128
-    implementation 'io.bidmachine:ads.networks.pangle:3.2.1.11' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:129
-    implementation 'io.bidmachine:ads.networks.vungle:3.2.1.9' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:130
-    implementation 'org.bidon:amazon-adapter:0.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:131
-    implementation 'org.bidon:bidmachine-adapter:0.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:132
-    implementation 'org.bidon:bigoads-adapter:0.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:133
-    implementation 'org.bidon:chartboost-adapter:0.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:134
-    implementation 'org.bidon:dtexchange-adapter:0.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:135
-    implementation 'org.bidon:inmobi-adapter:0.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:136
-    implementation 'org.bidon:meta-adapter:0.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:137
-    implementation 'org.bidon:mintegral-adapter:0.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:138
-    implementation 'org.bidon:mobilefuse-adapter:0.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:139
-    implementation 'org.bidon:unityads-adapter:0.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:141
-    implementation 'org.bidon:vkads-adapter:0.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:140
-    implementation 'org.bidon:vungle-adapter:0.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:142
-    implementation 'org.bidon:yandex-adapter:0.8.1.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:143
+    implementation 'io.bidmachine:ads.adapters.ironsource:3.3.0.9' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:148
+    implementation 'io.bidmachine:ads.networks.amazon:3.3.0.17' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:125
+    implementation 'io.bidmachine:ads.networks.meta_audience:3.3.0.17' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:126
+    implementation 'io.bidmachine:ads.networks.mintegral:3.3.0.13' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:127
+    implementation 'io.bidmachine:ads.networks.my_target:3.3.0.18' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:128
+    implementation 'io.bidmachine:ads.networks.pangle:3.3.0.12' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:129
+    implementation 'io.bidmachine:ads.networks.vungle:3.3.0.9' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:130
+    implementation 'org.bidon:amazon-adapter:0.9.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:131
+    implementation 'org.bidon:bidmachine-adapter:0.9.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:132
+    implementation 'org.bidon:bigoads-adapter:0.9.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:133
+    implementation 'org.bidon:chartboost-adapter:0.9.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:134
+    implementation 'org.bidon:dtexchange-adapter:0.9.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:135
+    implementation 'org.bidon:inmobi-adapter:0.9.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:136
+    implementation 'org.bidon:meta-adapter:0.9.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:137
+    implementation 'org.bidon:mintegral-adapter:0.9.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:138
+    implementation 'org.bidon:mobilefuse-adapter:0.9.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:139
+    implementation 'org.bidon:unityads-adapter:0.9.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:141
+    implementation 'org.bidon:vkads-adapter:0.9.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:140
+    implementation 'org.bidon:vungle-adapter:0.9.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:142
+    implementation 'org.bidon:yandex-adapter:0.9.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:143
 // Android Resolver Dependencies End
 **DEPS**}
 
@@ -174,12 +174,22 @@ android {
     } 
     
     buildTypes {
+        release {
+        // blah blah
+        matchingFallbacks = ['release']
+        }
+        enterprise {
+        // blah blah
+        matchingFallbacks = ['release']
+        }
         debug {
             //minifyEnabled true fixes this issue and allows you to use minSdkVersion 21
             minifyEnabled true
             signingConfig signingConfigs.debug
+            matchingFallbacks = ['debug']
     }
 }
+
 
 }**REPOSITORIES**
 **IL_CPP_BUILD_SETUP**
