--- a/Assets/Plugins/Android/mainTemplate.gradle
+++ b/Assets/Plugins/Android/mainTemplate.gradle
@@ -17,6 +17,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 dependencies {
+    implementation 'com.android.billingclient:billing:7.0.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 // Android Resolver Dependencies Start
     implementation 'com.applovin.mediation:amazon-tam-adapter:11.0.0.0' // Assets/Appodeal/Editor/Dependencies/AppodealDependencies.xml:166
